# JumpakuRhythm

./: .gitignore  README.md
gen-data/: CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
gen-data/data/: NoteSpeed.csv  note-data.tsv
gen-data/scripts/: gen-data-build-run.sh  gen-data-init.sh  gen-data-run.sh
gen-data/src/: BSplineCurve.cpp  ExtractNotes.cpp  ExtractNotes.h  VideoAnalysis.cpp  VideoAnalysis.h  main.cpp
gen-data/tools/extract_notes/: CMakeLists.txt  DetectNotes.cpp  DetectNotes.h  ExtractNotes.cpp  ExtractNotes.h  FrameProcess.cpp  FrameProcess.h  VideoAnalysis.cpp  VideoAnalysis.h  main.cpp
gen-data/tools/gen_data_lib/: CMakeLists.txt  ExtractNotes.cpp  ExtractNotes.h
music-data/: .devcontainer.json  Dockerfile  requirements.txt
music-data-py/: docker-compose.yml
music-data/scripts/: music-data-init.sh  music-data-run.sh
music-data/tools/: CMakeLists.txt
music-data/tools/main/: CMakeLists.txt  analysis.cpp  analysis.h  main.cpp
music-data/tools/music_data_lib/: CMakeLists.txt
music_analysis/: compare_tempo.py  main.py  script.sh
music_analysis/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
note-data/: output.txt
note-data/asset/frames_2019-05-23_0753/: note-data-msec.tsv
note-data/scripts/: gen-data-init.sh
note-data/tools/extract_notes/: main.cpp
plot-data/: Dockerfile  docker-compose.yml  plot.plt
prototyping/NotesData/: .gitignore
prototyping/NotesData/music-data/: .devcontainer.json  Dockerfile
prototyping/NotesData/music-data-py/: main.py  plot_vocal_separation.py
prototyping/NotesData/music-data/tools/main/: analysis.cpp  analysis.h  main.cpp  wavfile.cpp  wavfile.h
prototyping/NotesData/note-data/: docker-compose.yml
prototyping/NotesData/note-data/data/: DrstNoteCurve.txt
prototyping/NotesData/note-data/scripts/: gen-data-build-run.sh
prototyping/NotesData/note-data/tools/: CMakeLists.txt
prototyping/NotesData/note-data/tools/extract_notes/: BSplineCurve.hpp  DetectNotes.h
